k8/signoz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz-ingress
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
  # Frontend SigNoz (Interface Web)
  - host: signoz.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signoz-nodeport
            port:
              number: 8080

  # OTel Collector (pour envoyer les traces, metrics, logs)
  - host: otel.signoz.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signoz-otel-nodeport
            port:
              number: 4318
